--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.application.name=AdmComercio
-spring.datasource.url=jdbc:mysql://localhost:3308/admin_comercio?useSSL=false&serverTimezone=UTC
+spring.application.name=AppVenta
+spring.datasource.url=jdbc:mysql://localhost:3308/app_venta_ropa?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.main.banner-mode=off
+logging.pattern.console=%d{HH:mm} %-5level - %msg%n
